--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
