--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
-    "react-router-dom": "^5.3.0",
+    "react-router": "^6.17.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
