--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
+    "antd": "^5.12.8",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "react": "18.2.0",
