--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.2",
-    "antd": "^5.12.8",
+    "@mui/material": "^5.15.3",
     "aos": "^2.3.4",
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.4",
+    "react-quill": "^2.0.0",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.0",
